--- a/speedy.css
+++ b/speedy.css
@@ -1,3 +1,4 @@
+/* ~~~~~~~~~~~~~~~~~~~~~~START SPEEDY TABLE~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 table.speedy-table {
     max-width:100%;
     width: 100%;
@@ -41,3 +42,74 @@ table.speedy-table tbody tr:hover {
     background: -moz-linear-gradient(180deg, #D6E3F4 40%, #BED2EF 50%);
     background: linear-gradient(180deg, #D6E3F4 40%, #BED2EF 50%);
 }
+/* ~~~~~~~~~~~~~~~~~~~~~~END SPEEDY TABLE~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~START SPEEDY DIALOG~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+.speedy-dialog .spx-overlayPart {
+    width: 100%;
+    height:100vh !important;
+    position: fixed;
+    top:0px;
+    height:0px;
+    background: rgba(0,0,0,0.4);
+}
+.spx-innerDialogPart {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%,-50%);
+    min-width:250px;
+    width:500px;
+    height: 500px;
+    min-height:250px;
+    background: #fff;
+}
+.spx-dialogHeader {
+    padding: 5px;
+    font-weight: 600;
+    float: left;
+    width: 100%;
+    color: #505050;
+    position: relative;
+    background: #D1DEEF;
+    background: -webkit-linear-gradient(180deg, #D6E3F4 40%, #BED2EF 50%);
+    background: -moz-linear-gradient(180deg, #D6E3F4 40%, #BED2EF 50%);
+    background: linear-gradient(180deg, #D6E3F4 40%, #BED2EF 50%);
+}
+.spx-dialog-crossBtn {
+    width:20px;
+    height:20px;
+    font-size: 12px;
+    display:inline-flex;
+    border-radius: 50%;
+    float: right;
+    margin:1px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.4) inset;
+    color: #999;
+    cursor: pointer;
+    align-items:center;
+    justify-content:center;
+}
+.spx-dialog-crossBtn:active {
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.4) inset;
+}
+.spx-dialog-crossBtn .spx-mini {
+    width:8px;
+    height: 8px;
+    border:1px solid #999;
+}
+.spx-dialog-buttons {
+    float: right;
+}
+.spx-dialog-buttons + span {
+    float: left;
+}
+.spx-contentPart {
+    padding: 5px 5px 10px 5px;
+    clear:both;
+    height: calc(100% - 32px);
+    overflow: auto;
+}
+/* ~~~~~~~~~~~~~~~~~~~~~~END SPEEDY DIALOG~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
