--- a/speedy.css
+++ b/speedy.css
@@ -46,16 +46,15 @@ table.speedy-table tbody tr:hover {
 
 
 /* ~~~~~~~~~~~~~~~~~~~~~~START SPEEDY DIALOG~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-.speedy-dialog .spx-overlayPart {
+.spx-overlayPart {
     width: 100%;
-    height:100vh !important;
+    height:100vh;
     position: fixed;
     top:0px;
-    height:0px;
     background: rgba(0,0,0,0.4);
 }
 .spx-innerDialogPart {
-    position: absolute;
+    position: fixed;
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
@@ -65,6 +64,8 @@ table.speedy-table tbody tr:hover {
     height: 500px;
     min-height:250px;
     background: #fff;
+    z-index: 9999;
+    border: 1px solid #bed2ef;
 }
 .spx-dialogHeader {
     padding: 5px;
