--- a/speedy.css
+++ b/speedy.css
@@ -60,8 +60,8 @@ table.speedy-table tbody tr:hover {
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%,-50%);
     min-width:250px;
-    width:500px;
-    height: 500px;
+/*    width:500px;
+    height: 500px;*/
     min-height:250px;
     background: #fff;
     z-index: 9999;
